fixed chat wrong position bug

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -32,7 +32,7 @@ background-color: white;
     font-size: 14px;
     padding: 10px 30px;
     border-radius: 12px;
-    background-color: white;
+    background-color: white;  
     color: #213e3b;
 }
 
@@ -42,7 +42,7 @@ background-color: white;
     background-color: white;
     height: 100px;
     overflow: auto;
-    border-radius: 30%;
+    border-radius: 21%;
     border: 2px solid  #213e3b;
     width: 90%;
     margin-left: 5%;
